--- a/QandT.html
+++ b/QandT.html
@@ -104,7 +104,7 @@
 #borderimg { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(imgs/rgy.jpg) 30 round;
+  border-image: url(/imgs/rgy.jpg) 30 round;
 }
 
 .blink {
@@ -165,7 +165,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/2.png" style="width:300px;height:300px;">
+      <img src="imgs/2.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 
@@ -175,7 +175,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/4.png" style="width:300px;height:300px;">
+      <img src="imgs/4.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -185,7 +185,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/6.png" style="width:300px;height:300px;">
+      <img src="imgs/6.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -195,7 +195,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/8.png" style="width:300px;height:300px;">
+      <img src="imgs/8.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -205,12 +205,12 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/10.png" style="width:300px;height:300px;">
+      <img src="imgs/10.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/11.png" style="width:300px;height:300px;">
+      <img src="imgs/11.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
