--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 #borderimg1 { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(imgs/goldborder.jpg) 30 round;
+  border-image: url(imgs/goldborder.png) 30 round;
 }
 </style>
 </head>
