--- a/QandT.html
+++ b/QandT.html
@@ -104,7 +104,7 @@
 #borderimg { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(/imgs/rgy.jpg) 30 round;
+  border-image: url(imgs/rgy.png) 30 round;
 }
 
 .blink {
