--- a/profile.html
+++ b/profile.html
@@ -182,7 +182,7 @@ a {
 </div>
 <br>
 <div class="card">
-  <img src="imgs/profile.jpg" alt="Author" width="100%" height="100%">
+  <img src="imgs/profile.png" alt="Author" width="100%" height="100%">
   <h2>Sarvesh Soni</h2>
   <p class="title">Thriving in fast-paced world with low daring, moderate struggle, and high motivation.</p>
   
