--- a/QandT.html
+++ b/QandT.html
@@ -157,7 +157,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
 <div style="overflow:auto">
   <div class="main">
   
-  	<span class="blink"><h2>SoulWay ~ Indulging all the mixed emotions of life with fascinating context</h2></span>
+  	<span class="blink"><h2>Indulging all the mixed emotions of life with fascinating context</h2></span>
 	
    	<div class="containerimg">
       <img src="imgs/1.jpg" style="width:300px;height:300px;">
