--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	</span>
 	
 	<center>
-    <img src="imgs/awardee.png" width="300px" height="300px">
+    <img src="imgs/reward.png" width="300px" height="300px">
 
 </center>
 	
