--- a/bookreviews.html
+++ b/bookreviews.html
@@ -89,7 +89,7 @@
   }
 }
 .collapsible {
-  background-color: #01579B;
+  background-color: #bbe5f7;
   color: white;
   cursor: pointer;
   padding: 12px;
@@ -101,7 +101,7 @@
 }
 
 .active, .collapsible:hover {
-  background-color: #00ace6;
+  background-color: #60c2eb;
   color: black;
 }
 
