--- a/bookreviews.html
+++ b/bookreviews.html
@@ -11,7 +11,7 @@
 
 .header {
   overflow: hidden;
-  background-color: #9DD9F3;
+  background-color: #bbe5f7;
   padding: 20px 10px;
 }
 
@@ -89,7 +89,7 @@
   }
 }
 .collapsible {
-  background-color: #bbe5f7;
+  background-color: #01579B;
   color: white;
   cursor: pointer;
   padding: 12px;
