--- a/bookreviews.html
+++ b/bookreviews.html
@@ -89,7 +89,7 @@
   }
 }
 .collapsible {
-  background-color: #01579B;
+  background-color: #0059b3;
   color: white;
   cursor: pointer;
   padding: 12px;
@@ -101,7 +101,7 @@
 }
 
 .active, .collapsible:hover {
-  background-color: #60c2eb;
+  background-color: #33b0e6;
   color: black;
 }
 
@@ -119,7 +119,7 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #01579B;
+  background-color: #0059b3;
 }
 
 .flip-card {
