--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <h2>Welcome little warrior!</h2>
 	<p>Falling and rising in this lie-F?</p>
 
-	<img src="imgs/stw.gif" width="325px" height="325px" style="border: 2px solid black">
+	<img src="imgs/stw.gif" width="325px" height="325px">
 </center>	
 	<span class="text">
 	 <p id="borderimg1">I know how busy we have been in our lives; trying to focus on the exceptional dreams with mediocre efforts 
