--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
 }
 
 #borderimg1 { 
-  border: 7px solid transparent;
-  padding: 5px;
-  border-image: url(imgs/goldborder.png) 30 round;
+border-style: solid;
+border-width: 7px;
+padding: 5px;
+border-image: url(imgs/goldborder.jpg) 30 round;
 }
+	
 </style>
 </head>
 <body style="font-family:Segoe Print;">
