--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 border-style: solid;
 border-width: 7px;
 padding: 5px;
-border-image: url(../imgs/goldborder.jpg) 30 round;
+border-image: url(./imgs/goldborder.jpg) 30 round;
 }
 	
 </style>
