--- a/index.html
+++ b/index.html
@@ -99,10 +99,9 @@
 }
 
 #borderimg1 { 
-border-style: solid;
-border-width: 7px;
-padding: 5px;
-border-image: url(./imgs/goldborder.jpg) 30 round;
+  border: 30px solid transparent;
+  padding: 5px;
+  border-image: url(imgs/goldborder.jpg) 30 round;
 }
 	
 </style>
