--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	</span>
 	
 	<center>
-    <img src="imgs/reward.png" width="300px" height="300px">
+    <img src="imgs/rewardee.png" width="300px" height="300px">
 
 </center>
 	
