--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
   overflow: hidden;
 }
 
-
-
 .footsection
 {
 	background-color: #E7D981;
@@ -72,7 +70,6 @@
 	width:100%;
 	padding: 10px;
 }
-
 
 @media only screen and (max-width:800px) {
   /* For tablets: */
@@ -101,7 +98,7 @@
 #borderimg1 { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(imgs/goldborder.png) 30 round;
+	3.1 -webkit-border-image: url(imgs/goldborder.png) 30 round;
 }
 	
 </style>
