--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 #borderimg1 { 
   border: 7px solid transparent;
   padding: 5px;
-	3.1 -webkit-border-image: url(imgs/goldborder.png) 30 round;
+-webkit-border-image: url(imgs/goldborder.png) 30 round;
 }
 	
 </style>
