--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SoulWay</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Neuton' rel='stylesheet'>
 <style>
 * {
   box-sizing: border-box;
@@ -103,7 +104,7 @@
 	
 </style>
 </head>
-<body style="font-family:Segoe Print;">
+<body style="font-family:Neuton;">
 
 <center>
 <div style="background-image:url(imgs/stars.gif); background-size: cover; color: #b3b3b3; padding:15px;">
