--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	
 </style>
 </head>
-<body style="font-family:Neuton;">
+<body style="font-family:Segoe Print;">
 
 <center>
 <div style="background-image:url(imgs/stars.gif); background-size: cover; color: #b3b3b3; padding:15px;">
