--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	padding: 10px;
 }
 
+
 @media only screen and (max-width:800px) {
   /* For tablets: */
   .main {
@@ -99,12 +100,12 @@
 #borderimg1 { 
   border: 7px solid transparent;
   padding: 5px;
--webkit-border-image: url(imgs/goldbord.jpg) 30 round;
+  border-image: url(imgs/goldbord.jpg) 30 round;
 }
-	
+
 </style>
 </head>
-<body style="font-family:Livvic;">
+<body style="font-family: Livvic;">
 
 <center>
 <div style="background-image:url(imgs/stars.gif); background-size: cover; color: #b3b3b3; padding:15px;">
@@ -175,7 +176,7 @@
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Arial";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
 	</center>
 
 	
