--- a/QandT.html
+++ b/QandT.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quotes and Thoughts</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Livvic' rel='stylesheet'>
 <style>
 * {
   box-sizing: border-box;
@@ -128,7 +129,7 @@
 
 </style>
 </head>
-<body onload="startTime()" style="font-family:Segoe Print;">
+<body onload="startTime()" style="font-family:Livvic;">
 <center>
 <div style="background-image:url(imgs/stars.gif); background-size: cover; color: #b3b3b3; padding:15px;">
   <h1>SoulWay</h1>
@@ -149,15 +150,16 @@
  
 <center> 
 <p id="borderimg"><span style="color: black"><b>
-<span style="font-size: 20px;">
-<span id="txt"></span></span><br>
+<span style="font-size: 18px;">
+<span id="txt"></span><br>
 Time heals the unhealed; if good times couldn't last than don't worry, neither do the
-bad; everything's temporary.. even this passing time!</span></p></b>
+bad; everything's temporary.. even this passing time!</span></span></p></b>
 
 <div style="overflow:auto">
   <div class="main">
   
-  	<span class="blink"><h2>Indulging all the mixed emotions of life with fascinating context</h2></span>
+  	<span class="blink"><span style="font-size: 18px;">
+	Indulging all the mixed emotions of life with fascinating context</span></span>
 	
    	<div class="containerimg">
       <img src="imgs/1.jpg" style="width:300px;height:300px;">
@@ -165,7 +167,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/2.jpg" style="width:300px;height:300px;">
+      <img src="imgs/2.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 
@@ -175,7 +177,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/4.jpg" style="width:300px;height:300px;">
+      <img src="imgs/4.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -185,7 +187,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/6.jpg" style="width:300px;height:300px;">
+      <img src="imgs/6.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -195,7 +197,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/8.jpg" style="width:300px;height:300px;">
+      <img src="imgs/8.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -205,12 +207,12 @@ bad; everything's temporary.. even this passing time!</span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/10.jpg" style="width:300px;height:300px;">
+      <img src="imgs/10.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/11.jpg" style="width:300px;height:300px;">
+      <img src="imgs/11.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -230,7 +232,7 @@ bad; everything's temporary.. even this passing time!</span></p></b>
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Arial";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
 	</center>
 
 <b><i>Disclaimer:</b></i><br>
