--- a/QandT.html
+++ b/QandT.html
@@ -167,7 +167,7 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/2.png" style="width:300px;height:300px;">
+      <img src="imgs/2.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 
@@ -177,7 +177,7 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/4.png" style="width:300px;height:300px;">
+      <img src="imgs/4.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -187,7 +187,7 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/6.png" style="width:300px;height:300px;">
+      <img src="imgs/6.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -197,7 +197,7 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/8.png" style="width:300px;height:300px;">
+      <img src="imgs/8.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
@@ -207,12 +207,12 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/10.png" style="width:300px;height:300px;">
+      <img src="imgs/10.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/11.png" style="width:300px;height:300px;">
+      <img src="imgs/11.jpg" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
