--- a/articles.html
+++ b/articles.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Articles</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Livvic' rel='stylesheet'>
 <style>
 * {
   box-sizing: border-box;
@@ -132,7 +133,7 @@
 
 </style>
 </head>
-<body style="font-family:Segoe Print;">
+<body style="font-family: Livvic;">
 <center>
 <div style="background-image:url(imgs/stars.gif); background-size: cover; color: #b3b3b3; padding:15px;">
   <h1>SoulWay</h1>
@@ -154,7 +155,7 @@
 
 <div style="overflow:auto">
 
-<button type="button" class="collapsible"><span style="font-family:Segoe Print;">
+<button type="button" class="collapsible"><span style="font-family:Livvic;">
 Spread positivity? Want to inspire others through your articles?</span></button>
 <div class="content">
   <p><a href= "mailto:soulwaybysarvesh@gmail.com" style="text-decoration: none;">
@@ -210,7 +211,7 @@ Spread positivity? Want to inspire others through your articles?</span></button>
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Arial";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
 	</center>
 
 <b><i>Disclaimer:</b></i><br>
