--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Author Profile</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Livvic' rel='stylesheet'>
 
 <style>
 * {
@@ -79,7 +80,7 @@ button {
   cursor: pointer;
   width: 100%;
   font-size: 15px;
-  font-family: Segoe Print;
+  font-family: Livvic;
 }
 
 a {
@@ -161,7 +162,7 @@ a {
 }
 </style>
 </head>
-<body style="font-family:Segoe Print;">
+<body style="font-family:Livvic;">
 <center>
 <div style="background-image:url(imgs/stars.gif); background-size: cover; color: #b3b3b3; padding:15px;">
   <h1>SoulWay</h1>
@@ -185,7 +186,6 @@ a {
   <img src="imgs/profile.png" alt="Author" width="100%" height="100%">
   <h2>Sarvesh Soni</h2>
   <p class="title">Thriving in fast-paced world with low daring, moderate struggle, and high motivation.</p>
-  
   
   <p><a href="mailto:soulwaybysarvesh@gmail.com"><button>Contact</button></a></p>
 </div>
@@ -211,7 +211,7 @@ a {
 	<a href="mailto:soulwaybysarvesh@gmail.com" target="_blank">
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
-	<p style="font-family: Arial";> &copy; SoulWay, 2020</p>
+	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
 	</center>
 
 
