--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 #borderimg1 { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(imgs/goldbord.jpg) 30 round;
+  border-image-source: url(imgs/goldbord.jpg) 30 round;
 }
 
 </style>
