--- a/QandT.html
+++ b/QandT.html
@@ -105,7 +105,8 @@
 #borderimg { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(imgs/rgy.png) 30 round;
+-webkit-border-image: url(imgs/rgy.png) 30 round; 
+ border-image: url(imgs/rgy.png) 30 round;
 }
 
 .blink {
