--- a/QandT.html
+++ b/QandT.html
@@ -105,7 +105,7 @@
 #borderimg { 
   border: 7px solid transparent;
   padding: 5px;
--webkit-border-image: url(imgs/rgy.png) 30 round; 
+-webkit-border-image: url("border.png") 5 10 5 10 round;
  border-image: url(imgs/rgy.png) 30 round;
 }
 
