--- a/QandT.html
+++ b/QandT.html
@@ -55,6 +55,7 @@
     float: none;
   }
 }
+
 .footsection
 {
 	background-color: #ecb7bf;
@@ -105,8 +106,7 @@
 #borderimg { 
   border: 7px solid transparent;
   padding: 5px;
--webkit-border-image: url("border.png") 30 round;
- border-image: url(imgs/rgy.png) 30 round;
+  border: 4px solid #ecb7bf;
 }
 
 .blink {
@@ -154,13 +154,15 @@
 <span style="font-size: 18px;">
 <span id="txt"></span><br>
 Time heals the unhealed; if good times couldn't last than don't worry, neither do the
-bad; everything's temporary.. even this passing time!</span></span></p></b>
+bad; everything's temporary.. <br>even this passing time!</span></span></p>
+
 
 <div style="overflow:auto">
   <div class="main">
   
-  	<span class="blink"><span style="font-size: 18px;">
+  	<span class="blink"><span style="font-size: 18px; color: #da7282">
 	Indulging all the mixed emotions of life with fascinating context</span></span>
+	<br><br></b>
 	
    	<div class="containerimg">
       <img src="imgs/1.jpg" style="width:300px;height:300px;">
@@ -217,7 +219,6 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	
   </div>
 </div>
 </center>
@@ -234,7 +235,7 @@ bad; everything's temporary.. even this passing time!</span></span></p></b>
 	<i class="fa fa-envelope-square fa-2x social" style="color: #262626"></i></a>
 	
 	<p style="font-family: Livvic";> &copy; SoulWay, 2020</p>
-	</center>
+</center>
 
 <b><i>Disclaimer:</b></i><br>
 	Website content is managed by Sarvesh Soni.
@@ -260,5 +261,6 @@ function checkTime(i) {
   return i;
 }
 </script>
+
 </body>
 </html>
