--- a/articles.html
+++ b/articles.html
@@ -93,7 +93,7 @@
 #borderimg1 { 
   border: 7px solid transparent;
   padding: 5px;
-  border-image: url(imgs/orgglit.jpg) 30 round;
+  border: 4px solid #fde3c6;
 }
 
 
@@ -131,6 +131,28 @@
   background-color: #ffb399;
 }
 
+#more1 {display: none;} 
+#more2 {display: none;}
+#more3 {display: none;}  
+#more4 {display: none;}  
+#more5 {display: none;}   
+
+  
+.buttonreadmore {
+  background-color: #fde3c6;
+  border: 2px solid black;
+  color: black;
+  padding: 3px 3px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: Livvic;
+  font-weight: bold;
+}  
+
 </style>
 </head>
 <body style="font-family: Livvic;">
@@ -163,7 +185,7 @@ Spread positivity? Want to inspire others through your articles?</span></button>
 	<u>Click here</u></a> <span style ="color: white">for submitting the articles.
 	Attach your name, title and content. Kindly ensure that your articles shall encase
 	the positive and inspirational influence.
-	Word limit is specified to a maximum of 400 words. See below articles for a better understanding.
+	Word limit is specified to a maximum of 300 words. See below articles for a better understanding.
 	Keep writing! Keep sharing! :)
 	</span>
 	</p>
@@ -176,24 +198,108 @@ Spread positivity? Want to inspire others through your articles?</span></button>
   
   <img src="imgs/startline.png" style="width:300px;height:300px;">
   
-  <p id="borderimg1">Here, the image tiles to fill the area.
-  The image is rescaled if necessary, to avoid dividing tiles.</p>
-<br>
+  <p id="borderimg1">
+  <b> <span style="font-size: 18px;"><u>Procrastinating the Procrastination</u></span> 
+  <br>Article by Shourya Rohilla</b><br>
+   <span id="dots1"></span><span id="more1">
+   <span style="text-align: justify;">
+   The thing about humans is that they want rest. They require rest when they feel they are tired,
+   which is no doubt true. But many a times we think we are tired when we have just done a little 
+   to no work. And then we take rest. This doesn't help as it becomes a habit. 
+Humans may have a lot of abilities in them and being
+   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
+   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
+   it continues. Later on, the same us are left crying. If you think things are magically gonna 
+fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
+I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
+It devastates everything. So what can we do to erase this habit? Well the answer is so simple
+ that it was always there with you. As the cliche saying goes, "Start grinding, start working".
+ Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
+ It's easier said than done though, no doubt. But who said trying has limited attempts?
+Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
+Always tell yourself that you deserve something much bigger than your excuses and laziness. 
+After all, you are a precious piece of a human with so much talent in and out.
+  </span></span>
+  <br><button class ="buttonreadmore" onclick="myFunction1()" id="myBtn1">Read now</button></p>
+  <br>
   
-    <p id="borderimg1">Here, the image tiles to fill the area.
-  The image is rescaled if necessary, to avoid dividing tiles.</p>
+  <p id="borderimg1">
+  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+   <span id="dots2"></span><span id="more2">
+   <span style="text-align: justify;">
+   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
+   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
+   it continues. Later on, the same us are left crying. If you think things are magically gonna 
+fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
+I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
+It devastates everything. So what can we do to erase this habit? Well the answer is so simple
+ that it was always there with you. As the cliche saying goes, "Start grinding, start working".
+ Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
+ It's easier said than done though, no doubt. But who said trying has limited attempts?
+Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
+Always tell yourself that you deserve something much bigger than your excuses and laziness. 
+After all, you are a precious piece of a human with so much talent in and out.
+  </span></span>
+  <br><button class ="buttonreadmore" onclick="myFunction2()" id="myBtn2">Read now</button></p>
 <br>
 
-  <p id="borderimg1">Here, the image tiles to fill the area.
-  The image is rescaled if necessary, to avoid dividing tiles.</p>
+   <p id="borderimg1">
+  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+   <span id="dots3"></span><span id="more3">
+   <span style="text-align: justify;">
+   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
+   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
+   it continues. Later on, the same us are left crying. If you think things are magically gonna 
+fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
+I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
+It devastates everything. So what can we do to erase this habit? Well the answer is so simple
+ that it was always there with you. As the cliche saying goes, "Start grinding, start working".
+ Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
+ It's easier said than done though, no doubt. But who said trying has limited attempts?
+Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
+Always tell yourself that you deserve something much bigger than your excuses and laziness. 
+After all, you are a precious piece of a human with so much talent in and out.
+  </span></span>
+  <br><button class ="buttonreadmore" onclick="myFunction3()" id="myBtn3">Read now</button></p>
+
+  <p id="borderimg1">
+  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+   <span id="dots4"></span><span id="more4">
+   <span style="text-align: justify;">
+   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
+   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
+   it continues. Later on, the same us are left crying. If you think things are magically gonna 
+fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
+I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
+It devastates everything. So what can we do to erase this habit? Well the answer is so simple
+ that it was always there with you. As the cliche saying goes, "Start grinding, start working".
+ Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
+ It's easier said than done though, no doubt. But who said trying has limited attempts?
+Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
+Always tell yourself that you deserve something much bigger than your excuses and laziness. 
+After all, you are a precious piece of a human with so much talent in and out.
+  </span></span>
+  <br><button class ="buttonreadmore" onclick="myFunction4()" id="myBtn4">Read now</button></p>
 <br>
 
-  <p id="borderimg1">Here, the image tiles to fill the area.
-  The image is rescaled if necessary, to avoid dividing tiles.</p>
-<br>
-
-  <p id="borderimg1">Here, the image tiles to fill the area.
-  The image is rescaled if necessary, to avoid dividing tiles.</p>
+  <p id="borderimg1">
+  <b> <span style="font-size: 18px;">Procrastinating the Procrastination</span> <br>Article by Shourya Rohilla</b><br>
+   <span id="dots5"></span><span id="more5">
+   <span style="text-align: justify;">
+   lazy is one of them. We take things for granted. And most importantly, we procastinate. 
+   "I ll do it by tomorrow morning anyhow." But alas, that tomorrow soon becomes day after and 
+   it continues. Later on, the same us are left crying. If you think things are magically gonna 
+fall under your arms then you are cheating on yourself. Being lazy becomes a habit and nothing, 
+I repeat, nothing in this world is more dangerous than having laziness as your prime habit. 
+It devastates everything. So what can we do to erase this habit? Well the answer is so simple
+ that it was always there with you. As the cliche saying goes, "Start grinding, start working".
+ Make hard work as your habit and trust me once that becomes your habit, you are bound to achieve success.
+ It's easier said than done though, no doubt. But who said trying has limited attempts?
+Remember, the main problem resides with us. We think we have time, and that's where the problem lies. 
+Always tell yourself that you deserve something much bigger than your excuses and laziness. 
+After all, you are a precious piece of a human with so much talent in and out.
+  </span></span>
+  <br><button class ="buttonreadmore" onclick="myFunction5()" id="myBtn5">Read now</button></p>
 <br>
   
   </center>
@@ -237,7 +343,88 @@ for (i = 0; i < coll.length; i++) {
     } 
   });
 }
+
+function myFunction1() {
+  var dots = document.getElementById("dots1");
+  var moreText = document.getElementById("more1");
+  var btnText = document.getElementById("myBtn1");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
+
+function myFunction2() {
+  var dots = document.getElementById("dots2");
+  var moreText = document.getElementById("more2");
+  var btnText = document.getElementById("myBtn2");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
+function myFunction3() {
+  var dots = document.getElementById("dots3");
+  var moreText = document.getElementById("more3");
+  var btnText = document.getElementById("myBtn3");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
+function myFunction4() {
+  var dots = document.getElementById("dots4");
+  var moreText = document.getElementById("more4");
+  var btnText = document.getElementById("myBtn4");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
+function myFunction5() {
+  var dots = document.getElementById("dots5");
+  var moreText = document.getElementById("more5");
+  var btnText = document.getElementById("myBtn5");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read now"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Done"; 
+    moreText.style.display = "inline";
+  }
+}
+
 </script>
-	
 </body>
 </html>
