--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@ a {
 </div>
 
 	<div class="callout">
-  <div class="callout-header">Inquiry?</div>
+  <div class="callout-header">Inquiry</div>
   <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
   <div class="callout-container">
     <p>For any technical inquiry or feedback, you may kindly click on contact button.
