--- a/bookreviews.html
+++ b/bookreviews.html
@@ -138,14 +138,14 @@
 
   
 .buttonreadmore {
-  background-color: #004d99;
+  background-color: #005580;
   border: none;
   color: white;
   padding: 4px 4px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 12px;
+  font-size: 13px;
   margin: 4px 2px;
   cursor: pointer;
 }  
