--- a/articles.html
+++ b/articles.html
@@ -243,20 +243,20 @@ After all, you are a precious piece of a human with so much talent in and out.
 They say dreams speak through thoughts and action! Wondering how far we can see through,
 how far we can grow through, and most importantly how long we can do this. As a kid, from a small closet of 
 fashion-apparel and things, right from basics, to hugely
-dream about what could we possibly fill in to own a whole fancy boutique, and when we think we could do so; now there 
+dreamt possibilities to fill in to own a whole fancy boutique, and when we think we could do so; now there 
 comes a spark, how if one goes for
 it at their very own pace (of course continuous efforts), 'set small steps to reach the bigger ladder', 
 then repeat the small steps, 
 another bigger ladder, and so on. That's how you define sky is the limit no?
-Practice is an art, when done seriously, it earn wonders and miracles, seriously! Now the bigger
-picture is the willingness and courage to plan and provide an affordable yet fancy-dreamt closet to everyone?
+Practice is an art, when done seriously, it earns wonders and miracles, seriously! Now the bigger
+picture is the willingness and courage to plan and provide an affordable yet fancy-dreamt closet to everyone.
  Fun and seriousness
 are never written together, naah not here! The more fun you have in putting up ideas to spread the affordable 
 fancy apparel, the more your heart appreciates it. There will be a lot of trial and error, but we know
 tide turns every now and then and saying it for a boutique, it's up to the mark.
  From a small closet to owning a boutique, only extension in ideas, thoughts, the never give up spirit, and
  a kind effort to provide it for everyone out there!
-Certainly sounds like that child who dreamt of that owning a bigger picture once, is now 
+Certainly sounds like that child who dreamt of owning a bigger picture once, is now 
 getting into thoughts and action. So yes, they spoke it right, dreams do speak through thoughts and action!
   </span>
   <br><button class ="buttonreadmore" onclick="myFunction6()" id="myBtn6">Read now</button></p>
