--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@ img {vertical-align: middle;}
 	all the unsuccessful stories; meanwhile in the process, <br>
 	<b> A LITTLE WARRIOR WAS MADE.</b><br>
 	
-	<span style="background-color: #fbf9ea"><b><center>
+	<div style="background-color: #fbf9ea"><b><center>
 	We encourage you to send your content in course of 
 	book reviews and articles. We'll post them for you. On a light note, we would be highly obliged 
 	if you could send some positive and inspiring content; sharing some influential lines may motivate our readers.
  You may kindly navigate to respective <i>Book Reviews</i> and <i>Articles</i> page,
-	read the details and submit.</center></b></span>
+	read the details and submit.</center></b></div>
 	</p>
 	</span>
 	
