--- a/index.html
+++ b/index.html
@@ -200,17 +200,17 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="imgs/slide1.png" style="width:325px;height:325px;">
+  <img src="imgs/slide1.jpg" style="width:325px;height:325px;">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="imgs/slide2.png" style="width:325px;height:325px;">
+  <img src="imgs/slide2.jpg" style="width:325px;height:325px;">
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="imgs/slide3.png" style="width:325px;height:325px;">
+  <img src="imgs/slide3.jpg" style="width:325px;height:325px;">
 </div>
 
 </div>
