--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ img {vertical-align: middle;}
 		<img src="imgs/stw.gif" width="325px" height="325px"><br>
 		  <hr style="height:1px;border-width:0;background-color:#E7D981">
   <br>
-    <img src="imgs/rewardeey.png" width="325px" height="325px">
+    <img src="imgs/rewardeey.png" width="325px" height="325px" onclick="alert('Go to Book Reviews and Artciles')">
 	</center>
   
 </div>
